--- a/DiscordNetTemplate/MuslimBot.csproj
+++ b/DiscordNetTemplate/MuslimBot.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Discord.Addons.Hosting" Version="5.1.0" />
     <PackageReference Include="Discord.Net" Version="3.8.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="RestSharp" Version="108.0.2" />
   </ItemGroup>
 
   <ItemGroup>
