--- a/MuslimBot/Dockerfile
+++ b/MuslimBot/Dockerfile
@@ -2,8 +2,8 @@
 FROM mcr.microsoft.com/dotnet/sdk:6.0-focal AS build
 WORKDIR /source
 COPY . .
-RUN dotnet restore "./MuslimBot/MuslimBot.csproj" --disable-parallel
-RUN dotnet publish "./MuslimBot/MuslimBot.csproj" -c release -o /app --no-restore
+RUN dotnet restore "MuslimBot/MuslimBot.csproj" --disable-parallel
+RUN dotnet publish "MuslimBot/MuslimBot.csproj" -c release -o /app --no-restore
 
 # Serve Stage
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-focal
